# G4SPEAR

./: CMakeLists.txt  CrystalHit.h  EventAction.h  LICENSE  PrimaryGeneratorAction.h  README.md  init_vis.mac  run1.mac  run2.mac  spear.cpp  spear.in  vis.mac
include/: ActionInitialization.h  CrystalHit.h  CrystalSD.h  DetectorConstruction.h  PrimaryGeneratorAction.h  RunAction.h
src/: ActionInitialization.cpp  CrystalHit.cpp  CrystalSD.cpp  DetectorConstruction.cpp  EventAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp
