# CMakeList.txt : CMake project for spear, include source and define
# project specific logic here.
#
#----------------------------------------------------------------------------
# Setup the project
#
cmake_minimum_required (VERSION 3.16)

project ("spear")

#----------------------------------------------------------------------------
# Find Geant4 package, activating all available UI and Vis drivers by default
# You can set WITH_GEANT4_UIVIS to OFF via the command line or ccmake/cmake-gui
# to build a batch mode only executable
#
option(WITH_GEANT4_UIVIS "Build example with Geant4 UI and Vis drivers" ON)
if(WITH_GEANT4_UIVIS)
  find_package(Geant4 REQUIRED ui_all vis_all)
else()
  find_package(Geant4 REQUIRED)
endif()

#----------------------------------------------------------------------------
# Setup Geant4 include directories and compile definitions
# Setup include directory for this project
#
include(${Geant4_USE_FILE})
include_directories(${PROJECT_SOURCE_DIR}/include)

#----------------------------------------------------------------------------
# Locate sources and headers for this project
# NB: headers are included so they will show up in IDEs
#
file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*)
file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*)

#----------------------------------------------------------------------------
# Add source to this project's executable, and link it to the Geant4
# libraries
add_executable (spear "spear.cpp" ${sources} ${headers})
target_link_libraries(spear ${Geant4_LIBRARIES})

set_property(TARGET spear PROPERTY CXX_STANDARD 17)

#----------------------------------------------------------------------------
# Copy all scripts to the build directory, i.e. the directory in which we
# build spear. This is so that we can run the executable directly because it
# relies on these scripts being in the current working directory.
#
set(SPEAR_SCRIPTS
  spear.in
#  spear.out
  init_vis.mac
  run1.mac
  run2.mac
  vis.mac
)

foreach(_script ${SPEAR_SCRIPTS})
  configure_file(
    ${PROJECT_SOURCE_DIR}/${_script}
    ${PROJECT_BINARY_DIR}/${_script}
    COPYONLY
  )
endforeach()

# TODO: Add tests and install targets if needed.
# install(TARGETS spear DESTINATION bin)
